--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- 프리텐다드 -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <!-- https://ionic.io/ionicons/v1 -->
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/header.css">
@@ -44,7 +44,7 @@
             $("section#collection .wrap ul.brand li ul.list li a").click(function(){
                 $(this).parent().children("article").show().addClass("addgrid");
                 $(this).parent().siblings().children("article").hide().removeClass("addgrid");
-                // $("section#collection .wrap ul.brand li").siblings().children("ul").children().children("article").hide().removeClass("addgrid");
+                // $(this).parents("li.brandH").children("ul").children("li").children("article").hide().removeClass("addgrid");
                 return false;
             });
 
@@ -142,7 +142,7 @@
             <div class="wrap">
                 <h2 class="h2">COLLECTION</h2>
                 <ul class="brand">
-                    <li class="silk">
+                    <li class="silk brandH">
                         <h3><a href="">실크 브랜드</a></h3>
                         <ul class="list">
                             <li>
@@ -197,7 +197,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="brandH">
                         <h3><a href="">합지 브랜드</a></h3>
                         <ul class="list">
                             <li class="hapji">
